プロフィール更新,cssの作成

--- a/index.html
+++ b/index.html
@@ -1,1 +1,58 @@
-Hello Github Pages desu
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>Mikihiro Ikura</title>
+    <link rel="stylesheet" type="text/css" href="template.css">
+  </head>
+  <body>
+    <header class="page-header">
+      <h1 class="header-name">Mikihiro Ikura</h1>
+    </header>
+    <header class="section-header">
+      <h2 class="header-title">About me</h2>
+    </header>
+      <div class="executive-summary">
+          <p>Research theme: Robotics, High-speed image processing</p>
+          <p>2nd year student at the University of Tokyo</p>
+      </div>
+
+
+    <!--Education-->
+    <header class="section-header">
+      <h2>Education</h2>
+    </header>
+    <div class="resume-item">
+      <h3>Information Science and Technology, The University of Tokyo</h3>
+      <h4>&bull; 2018 &mdash; present</h4>
+    </div>
+
+    <div class="resume-item">
+      <h3>Aeronautics and Astronautics, The Univeristy of Toyko</h3>
+      <h4>&bull; 2013 &mdash; 2018</h4>
+    </div>
+    <!--End Education-->
+
+    <!--Experience-->
+    <header class="section-header">
+      <h2>Experience</h2>
+    </header>
+      <div class="resume-item">
+        <h3>Ishikawa Senoo Lab.</h3>
+        <h4>Research Assistant</h4>
+      </div>
+      <div class="resume-item">
+        <h3>ispace inc.</h3>
+        <h4>Long term internship (2017.9 &mdash; 2018.6)</h4>
+        <h5>&bull; Mechatronics analysis</h5>
+      </div>
+      <div class="resume-item">
+        <h3>Nakasuka &mdash; Funase Lab. (ISSL)</h3>
+        <h4>development of nano spacecraft, EQUULEUS</h4>
+        <h5>&bull; Mission I/F</h5>
+        <h5>&bull; ADCS software</h5>
+      </div>
+
+    <!--End Experience-->
+  </body>
+</html>
