--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <div class="resume-item">
         <h3>Nakasuka &mdash; Funase Lab. (ISSL)</h3>
         <h4>development of nano spacecraft, EQUULEUS</h4>
-        <h5>&bull; Mission I/F</h5>
+        <h5>&bull; Mission I/F, DELPHINUS</h5>
         <h5>&bull; ADCS software</h5>
       </div>
 
