--- a/index.html
+++ b/index.html
@@ -3,139 +3,125 @@
   <head>
     <meta charset="utf-8">
     <title>Mikihiro Ikura</title>
-    <link rel="stylesheet" type="text/css" href="template.css">
+    <link rel="stylesheet" type="text/css" href="m-ikura_style.css">
   </head>
   <body>
-    <header class="page-header">
-      <h1 class="header-name">Mikihiro Ikura</h1>
-      <div align="center">
-          <img src="imgs/mikura_githubio.jpg" width="128px" />
+    <div class="palette">
+      <div class="image">
+        <img src="imgs/mikura_githubio.jpg" width="300px" />
       </div>
-    </header>
-    <header class="section-header">
-      <h2 class="header-title">About me</h2>
-    </header>
-      <div class="executive-summary">
-          <p>Research theme: Robotics, High-speed image processing</p>
-          <p>2nd year student at the University of Tokyo adviced by Prof. Ishikawa</p>
+      <div class="intro">
+        <h1>Mikihiro Ikura</h1>
+        <h2>Master students</h2>
+        Department of Mechano-Informatics, <br>
+        Graduate School of Information Science and Technology, <br>
+        The University of Tokyo, Tokyo, Japan <br>
       </div>
-
-
-    <!--Education-->
-    <header class="section-header">
-      <h2>Education</h2>
-    </header>
-    <div class="resume-item">
-      <h3>Information Science and Technology, The University of Tokyo</h3>
-      <h4>&bull; 2018 &mdash; present</h4>
-    </div>
-
-    <div class="resume-item">
-      <h3>Aeronautics and Astronautics, The Univeristy of Toyko</h3>
-      <h4>&bull; 2013 &mdash; 2018</h4>
-    </div>
-    <!--End Education-->
-
-    <!--Publication-->
-    <header class="section-header">
-      <h2>Research</h2>
-    </header>
-    <div class="resume-item">
-      <h3>Papers</h3>
+      <p style="clear:both;"></p>
+      <div class="title"> Biography </div>
+      Mikihiro Ikura is a master student in Graduate School of
+      Information Science and Technology, Department of Creative
+      Informatics, the University of Tokyo.
+      My major is high speed image processing, 3D sensing, and Robotics 
+      at Ishikawa Senoo Laboratory.
+      Especially, my research is focused on a UAV safe landing system
+      on an unknown and unstable ground.
+      <h3>Interests</h3>
       <ul>
-        <li><u>Mikihiro Ikura</u>, Satoshi Ikari, Atsushi Tomiki, Ryu Funase, Shinichi Nakasuka:
-          Estimation Algorithm of Relative Position and Attitude during Proximity Rendezvous
-          Using Multiple Ultra-Wide-Band Devices, The 31st ISTS Special Issue of Transaction of JSASS,
-          Aerospace Technology Japan. <a href="https://doi.org/10.2322/tastj.17.43">https://doi.org/10.2322/tastj.17.43</a></li>
+        <li>Robotics, Computer Vision</li>
+        <li>Autonomous safe landing system for UAV</li>
+        <li>High-speed 3D sensing system for robotics</li>
+        <li>Rendezvous and docking system for nano-spacecraft</li>
       </ul>
-      <h3>International Conference</h3>
+
+      <h3>Education</h3>
       <ul>
-        <li><u>Mikihiro Ikura</u>, Leo Miyashita, Masatoshi Ishikawa:
-          Real-time Landing Gear Control System Based on Adaptive 3D Sensing for Safe Landing of UAV
-          , 2020 IEEE/SICE International Symposium on System Integration (SII2020),
-          Hawaii Convention Center, Honolulu, Hawaii, USA, January 12&mdash;15, 2020. (expected)</li>
-        <li><u>Mikihiro Ikura</u>, Estimation Algorithm of Relative
-          Position and Attitude during Proximity Rendezvous and Docking
-           Using Multiple Ultra-Wide-Band Devices. 2017.6
-           The 31st International Symposiumon Space Technology and Science(ISTS),
-           Matsuyama, Japan. <font color="red">(SPSS(Society for Promotion of Space Science) President Award)</font></li>
+        <li>M.S. in Creative Informatics, 2018-Now (Graduate School of Information Science and Technology, The University of Tokyo)</li>
+        <li>B.S. in Aeronautics and Astronautics, 2013-2018 (Faculty of Engineering, The University of Tokyo)</li>
       </ul>
-      <h3>Domestic Conference</h3>
+
+      <h3>Skills</h3>
       <ul>
-        <li><u>井倉 幹大</u>, 宮下 令央, 石川 正俊: 不整地への着陸に向けた
-          適応的3次元形状計測によるUAVの高速脚制御システム, 第20回計測自動制御学会システムインテグレーション部門講演会 (SI2019) (2019) (発表予定)
-        <li><u>井倉 幹大</u>, 宮下 令央, 石川 正俊: UAVの安全着陸に向けた
-          適応的3次元形状計測による時空間分解能の向上, ロボティクス・メカトロニクス講演会 (ROBOMECH2019), (2019)</li>
+        <li>Language: Japanese (native), English (intermediate)</li>
+        <li>Programming language: C/C++, Python, Javascript, Ruby, HTML</li>
+        <li>Software: OpenCV, OpenGL, MATLAB, Linux(Ubuntu), MS Office, Inventor, Adobe Illustrator, AfterEffects, Chainer</li>
       </ul>
-      <h3>Awards & Scholarship</h3>
+
+      <h3>Scholarship & Awards</h3>
       <ul>
         <li>2020年度 日本学術振興会 特別研究員DC1 (採用)</li>
         <li>東京大学 ソーシャルICT グローバル・クリエイティブリーダー育成プログラム採用, 2019.4</li>
         <li>31st International Symposium on Space Technology and Science(ISTS) SPSS President Award, 2017.6</li>
       </ul>
+
+
+      <div class="title"> Publications </div>
+      <h3>Papers</h3>
+      <ol>
+        <li><u>Mikihiro Ikura</u>, Satoshi Ikari, Atsushi Tomiki, Ryu Funase, Shinichi Nakasuka:
+          Estimation Algorithm of Relative Position and Attitude during Proximity Rendezvous
+          Using Multiple Ultra-Wide-Band Devices, The 31st ISTS Special Issue of Transaction of JSASS,
+          Aerospace Technology Japan. <a href="https://doi.org/10.2322/tastj.17.43">https://doi.org/10.2322/tastj.17.43</a>
+        </li>
+      </ol>
+
+      <h3>International Conference</h3>
+      <ol>
+        <li><u>Mikihiro Ikura</u>, Leo Miyashita, Masatoshi Ishikawa:
+          Real-time Landing Gear Control System Based on Adaptive 3D Sensing for Safe Landing of UAV
+          , 2020 IEEE/SICE International Symposium on System Integration (SII2020),
+          Hawaii Convention Center, Honolulu, Hawaii, USA, January 12&mdash;15, 2020. (expected)
+        </li>
+        <li><u>Mikihiro Ikura</u>, Estimation Algorithm of Relative
+          Position and Attitude during Proximity Rendezvous and Docking
+           Using Multiple Ultra-Wide-Band Devices. 2017.6
+           The 31st International Symposiumon Space Technology and Science(ISTS),
+           Matsuyama, Japan. <font color="red">(SPSS(Society for Promotion of Space Science) President Award)</font>
+        </li>
+      </ol>
+
+      <h3>Domestic Conference</h3>
+      <ol>
+        <li><u>井倉 幹大</u>, 宮下 令央, 石川 正俊: 不整地への着陸に向けた
+          適応的3次元形状計測によるUAVの高速脚制御システム, 第20回計測自動制御学会システムインテグレーション部門講演会 (SI2019) (2019) (発表予定)
+        <li><u>井倉 幹大</u>, 宮下 令央, 石川 正俊: UAVの安全着陸に向けた
+          適応的3次元形状計測による時空間分解能の向上, ロボティクス・メカトロニクス講演会 (ROBOMECH2019), (2019)</li>
+      </ol>
+
+      <div class="title"> Works </div>
+      <h3>TATA Consultancy Services</h3>
+      <ul>
+        <li>Software engineer (2019.9 &mdash; 2019.10)</li>
+        Theme: Drone-to-Drone detection & tracking algorithm with computer vision <br>
+        Study at Indian Institute of Science (IISc)
+      </ul>
+      <h3><a href="http://jasakawa9.wixsite.com/website">AQT-D</a></h3>
+      AQT-D is the ISS-deployed 3U CubeSat for a demonstration of the water micro-propulsion system,
+      launched by H-IIB rocket in 2019.09.25.
+      <ul>
+        <li>Software engineer(2018.6 &mdash; Now)</li>
+        ADCS software
+      </ul>
+      <h3>Mitsubishi Electric Co.</h3>
+      <ul>
+        <li>Software engineer (2018.8 &mdash; 2018.9)</li>
+        Theme: Driver's posture estimation using car inner camera by machine learning
+      </ul>
+      <h3><a href="http://www.k2.t.u-tokyo.ac.jp/index-j.html">Ishikawa Senoo Lab.</a></h3>
+      <ul>
+        <li>Research Assistant (2018.6 &mdash; Now)</li>
+      </ul>
+      <h3><a href="https://ispace-inc.com/jpn/">ispace inc.</a></h3>
+      <ul>
+        <li>Long term internship (2017.9 &mdash; 2018.6)</li>
+        Lunar lander mechatronics analysis engineer
+      </ul>
+      <h3><a href="https://www.space.t.u-tokyo.ac.jp/nlab/index.html">Nakasuka &mdash; Funase Lab. (ISSL)</a></h3>
+      <ul>
+        <li>Development of nano spacecraft, <a href="https://www.space.t.u-tokyo.ac.jp/equuleus/en/">EQUULEUS</a> (2016.4 &mdash; 2017.9)</li>
+        Mission I/F, DELPHINUS<br>
+        ADCS software
+      </ul>
     </div>
-
-
-    <!--End Publication-->
-
-    <!--Skill-->
-    <header class="section-header">
-      <h2 id="skill">Skills</h2>
-    </header>
-      <div class="resume-item">
-        <ul>
-          <li>Language: Japanese (native), English (intermediate)</li>
-          <li>Programming language: C/C++, Python, Javascript, Ruby, HTML</li>
-          <li>Software: OpenCV, OpenGL, MATLAB, Linux(Ubuntu), Inventor, Adobe Illustrator, AfterEffects, Chainer</li>
-        </ul>
-      </div>
-    <!--End Skill-->
-
-    <!--Experience-->
-    <header class="section-header">
-      <h2>Experience</h2>
-    </header>
-      <div class="resume-item">
-        <h3>TATA Consultancy Services</h3>
-        <ul>
-          <li>Software engineer (2019.9 &mdash; 2019.10)</li>
-          Theme: Drone-to-Drone detection & tracking algorithm with computer vision <br>
-          Study at Indian Institute of Science (IISc)
-        </ul>
-        <h3><a href="http://jasakawa9.wixsite.com/website">AQT-D</a></h3>
-        AQT-D is the ISS-deployed 3U CubeSat for a demonstration of the water micro-propulsion system,
-        launched by H-IIB rocket in 2019.09.25.
-        <ul>
-          <li>Software engineer(2018.6 &mdash;)</li>
-          ADCS software
-        </ul>
-        <h3>Mitsubishi Electric Co.</h3>
-        <ul>
-          <li>Software engineer (2018.8 &mdash; 2018.9)</li>
-          Theme: Driver's posture estimation using car inner camera by machine learning
-        </ul>
-        <h3><a href="http://www.k2.t.u-tokyo.ac.jp/index-j.html">Ishikawa Senoo Lab.</a></h3>
-        <ul>
-          <li>Research Assistant (2018.6 &mdash;)</li>
-        </ul>
-      </div>
-      <div class="resume-item">
-        <h3><a href="https://ispace-inc.com/jpn/">ispace inc.</a></h3>
-        <ul>
-          <li>Long term internship (2017.9 &mdash; 2018.6)</li>
-          Lunar lander mechatronics analysis engineer
-        </ul>
-      </div>
-      <div class="resume-item">
-        <h3><a href="https://www.space.t.u-tokyo.ac.jp/nlab/index.html">Nakasuka &mdash; Funase Lab. (ISSL)</a></h3>
-        <ul>
-          <li>Development of nano spacecraft, <a href="https://www.space.t.u-tokyo.ac.jp/equuleus/en/">EQUULEUS</a></li>
-          Mission I/F, DELPHINUS<br>
-          ADCS software
-        </ul>
-      </div>
-    <!--End Experience-->
-
-
   </body>
 </html>
