専攻を修正

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="intro">
         <h1>Mikihiro Ikura</h1>
         <h2>Master students</h2>
-        Department of Mechano-Informatics, <br>
+        Department of Creative Informatics, <br>
         Graduate School of Information Science and Technology, <br>
         The University of Tokyo, Tokyo, Japan <br>
       </div>
@@ -22,7 +22,7 @@
       Mikihiro Ikura is a master student in Graduate School of
       Information Science and Technology, Department of Creative
       Informatics, the University of Tokyo.
-      My major is high speed image processing, 3D sensing, and Robotics 
+      My major is high speed image processing, 3D sensing, and Robotics
       at Ishikawa Senoo Laboratory.
       Especially, my research is focused on a UAV safe landing system
       on an unknown and unstable ground.
