NF研の名前修正

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <li>Long term internship (2017.9 &mdash; 2018.6)</li>
         Lunar lander mechatronics analysis engineer
       </ul>
-      <h3><a href="https://www.space.t.u-tokyo.ac.jp/nlab/index.html">Nakasuka &mdash; Funase Lab. (ISSL)</a></h3>
+      <h3><a href="https://www.space.t.u-tokyo.ac.jp/nlab/index.html">Nakasuka Funase Lab. (ISSL)</a></h3>
       <ul>
         <li>Development of nano spacecraft, <a href="https://www.space.t.u-tokyo.ac.jp/equuleus/en/">EQUULEUS</a> (2016.4 &mdash; 2017.9)</li>
         Mission I/F, DELPHINUS<br>
