CVの作成，修正

--- a/index.html
+++ b/index.html
@@ -12,18 +12,19 @@
       </div>
       <div class="intro">
         <h1>Mikihiro Ikura</h1>
-        <h2>Master students</h2>
-        Department of Creative Informatics, <br>
-        Graduate School of Information Science and Technology, <br>
+        <h2>Ph.D Student</h2>
+        Department of Precision Engineering, <br>
+        Graduate School of Engineering, <br>
         The University of Tokyo, Tokyo, Japan <br>
+        <br>
+        Email: ikura(at)robot.t.u-tokyo.ac.jp <br>
       </div>
       <p style="clear:both;"></p>
       <div class="title"> Biography </div>
-      Mikihiro Ikura is a master student in Graduate School of
-      Information Science and Technology, Department of Creative
-      Informatics, the University of Tokyo.
+      Mikihiro Ikura is a Ph.D student in Graduate School of
+      Engineering, Department of Precision Engineering, the University of Tokyo.
       My major is high speed image processing, 3D sensing, and Robotics
-      at Ishikawa Senoo Laboratory.
+      at Asama Yamashita Laboratory.
       Especially, my research is focused on a UAV safe landing system
       on an unknown and unstable ground.
       <h3>Interests</h3>
@@ -36,7 +37,8 @@
 
       <h3>Education</h3>
       <ul>
-        <li>M.S. in Creative Informatics, 2018-Now (Graduate School of Information Science and Technology, The University of Tokyo)</li>
+        <li>Ph.D student in Precision Engineering, 2020-Now (Graduate School of Engineering, The University of Tokyo)</li>
+        <li>M.S. in Creative Informatics, 2018-2020 (Graduate School of Information Science and Technology, The University of Tokyo)</li>
         <li>B.S. in Aeronautics and Astronautics, 2013-2018 (Faculty of Engineering, The University of Tokyo)</li>
       </ul>
 
@@ -49,8 +51,9 @@
 
       <h3>Scholarship & Awards</h3>
       <ul>
-        <li>2020年度 日本学術振興会 特別研究員DC1 (採用)</li>
-        <li>東京大学 ソーシャルICT グローバル・クリエイティブリーダー育成プログラム採用, 2019.4</li>
+        <li>Best Student Paper Award, 2020 IEEE/SICE International Symposium on System Integration (SII2020), 2020.1</li>
+        <li>Research Fellowship for Young Scientists DC1, Japan Society for the Promotion of Science (JSPS), April (2020) – March (2023)</li>
+        <li>The University of Tokyo Program for Leading Graduate Schools, Graduate Program for Social ICT Global Creative Leaders, 2019.4</li>
         <li>31st International Symposium on Space Technology and Science(ISTS) SPSS President Award, 2017.6</li>
       </ul>
 
@@ -58,7 +61,12 @@
       <div class="title"> Publications </div>
       <h3>Papers</h3>
       <ol>
-        <li><u>Mikihiro Ikura</u>, Satoshi Ikari, Atsushi Tomiki, Ryu Funase, Shinichi Nakasuka:
+        <li>Kazuya Yaginuma, Jun Asakawa, Yuichi Nakagawa, Yoshihiro Tsuruda, Hiroyuki Koizumi,
+          Kota Kakihara, Kanta Yanagida, Yusuke Murata, <b><u>Mikihiro Ikura</u></b>, Shuhei Matsushita,
+          Yoshihide Aoyanagi, Takeshi Matsumoto: AQT-D: CubeSat Demonstration of a Water Propulsion
+          System Deployed from ISS, Transaction of JSASS, Aerospace Technology Japan, Vol. 17, No. 20, pp.1-8, 2020. (accepted)
+        </li>
+        <li><b><u>Mikihiro Ikura</u></b>, Satoshi Ikari, Atsushi Tomiki, Ryu Funase, Shinichi Nakasuka:
           Estimation Algorithm of Relative Position and Attitude during Proximity Rendezvous
           Using Multiple Ultra-Wide-Band Devices, The 31st ISTS Special Issue of Transaction of JSASS,
           Aerospace Technology Japan. <a href="https://doi.org/10.2322/tastj.17.43">https://doi.org/10.2322/tastj.17.43</a>
@@ -67,61 +75,118 @@
 
       <h3>International Conference</h3>
       <ol>
-        <li><u>Mikihiro Ikura</u>, Leo Miyashita, Masatoshi Ishikawa:
+        <li><b><u>Mikihiro Ikura</u></b>, Leo Miyashita, Masatoshi Ishikawa:
           Real-time Landing Gear Control System Based on Adaptive 3D Sensing for Safe Landing of UAV
           , 2020 IEEE/SICE International Symposium on System Integration (SII2020),
-          Hawaii Convention Center, Honolulu, Hawaii, USA, January 12&mdash;15, 2020. (expected)
-        </li>
-        <li><u>Mikihiro Ikura</u>, Estimation Algorithm of Relative
+          Hawaii Convention Center, Honolulu, Hawaii, USA, January 12&mdash;15, 2020. <b><font color="red">Best Student Paper Award</font></b>
+        </li><br>
+        <li>Jun Asakawa, Kazuya Yaginuma, Yoshihiro Tsuruda,
+          Hiroyuki Koizumi, Yuichi Nakagawa, Kota Kakihara, Kanta Yanagida,
+          Yoshihide Aoyanagi, Takeshi Matsumoto, Shuhei Matsushita, Yusuke Murata,
+          <b><u>Mikihiro Ikura</u></b>: AQT-D: Demonstration of the Water Resistojet
+          Propulsion System by the ISS-Deployed CubeSat. In Procedings of 33rd Annual AIAA/USU Conference on Small Satellites (SSC). SSC19-WKV-07, 2019.
+        </li><br>
+        <li>Jun Asakawa, Kazuya Yaginuma, Yuichi Nakagawa, Yoshihiro Tsuruda,
+          Hiroyuki Koizumi, Kota Kakihara, Kanta Yanagida, <b><u>Mikihiro Ikura</u></b>,
+          Shuhei Matsushita, Yusuke Murata, Yoshihide Aoyanagi, Takeshi Matsumoto:
+          Development of AQT-D: the ISS-Deployed CubeSat For the Demonstration of the Water Micro-Propulsion System.
+          In Procedings of International Space Station Research and Development Conference (ISSRDC). 2019-H-39, 2019.
+        </li><br>
+        <li>Ryu Funase, Satoshi Ikari, Yosuke Kawabata, Kota Miyoshi,
+          Shintaro Nakajima, Takumi Kudo, Yuki Koshiro, Masashi Tomooka,
+          Shunichiro Nomura, Akifumi Wachi, Kota Kakihara, Ryohei Takahashi,
+          Kanta Yanagida, Shuhei Matsushita, Akihiro Ishikawa, <b><u>Mikihiro Ikura</u></b>,
+          Nobuhiro Funabiki, Yuta Kobayashi, Atsushi Tomiki, Taichi Ito, et al.:
+          EQUULEUS: A 6U CUBESAT TO FLY TO LUNAR LAGRANGE POINT ONBOARD SLS EM-1,
+          Low-Cost Planetary Missions Conference, Pasadena, the United States, August 2017.
+        </li><br>
+        <li><b><u>Mikihiro Ikura</u></b>: Estimation Algorithm of Relative
           Position and Attitude during Proximity Rendezvous and Docking
            Using Multiple Ultra-Wide-Band Devices. 2017.6
            The 31st International Symposiumon Space Technology and Science(ISTS),
-           Matsuyama, Japan. <font color="red">(SPSS(Society for Promotion of Space Science) President Award)</font>
+           Matsuyama, Japan. <b><font color="red">(SPSS(Society for Promotion of Space Science) President Award)</font></b>
+        </li><br>
+        <li>Shunichiro Nomura, Ryohei Takahashi, <b><u>Mikihiro Ikura</u></b>,
+          Kenshiro Oguri, Toshihiro Obata, Satoshi Ikari, Ryu Funase:
+          Initial Design of EQUULEUS Attitude Determination and Control System:
+          How to Design an ADCS with High Reliability for a Deep Space CubeSat,
+          31st International Symposium on Space Technology and Science(ISTS), Matsuyama, Japan, June, 2017.
         </li>
       </ol>
 
       <h3>Domestic Conference</h3>
       <ol>
-        <li><u>井倉 幹大</u>, 宮下 令央, 石川 正俊: 不整地への着陸に向けた
-          適応的3次元形状計測によるUAVの高速脚制御システム, 第20回計測自動制御学会システムインテグレーション部門講演会 (SI2019) (2019) (発表予定)
-        <li><u>井倉 幹大</u>, 宮下 令央, 石川 正俊: UAVの安全着陸に向けた
-          適応的3次元形状計測による時空間分解能の向上, ロボティクス・メカトロニクス講演会 (ROBOMECH2019), (2019)</li>
+        <li><b><u>井倉 幹大</u></b>, 宮下 令央, 石川 正俊: 不整地への着陸に向けた適応的 3 次元形状計測による UAV の高速脚制御システム,
+          第20回計測自動制御学会システムインテグレーション部門講演会 (SI2019), 講演論文集, 2E5-02, pp.1881-1886 (2019).</li><br>
+        <li>浅川純, 柳沼和也, 中川悠一, 鶴田佳宏, 小泉宏之, 柿原浩太, 柳田幹太, 松下周平, <u>井倉幹大</u>, 村田裕亮, 青柳賢英, 松本健
+          : ISS放出による超小型水スラスタ実証衛星AQT-Dの開発, 第63回宇宙科学技術連合講演会, (2019.11.7) / 講演論文集, 2Q10 (2019).</li><br>
+        <li><b><u>井倉 幹大</u></b>, 宮下 令央, 石川 正俊: UAVの安全着陸に向けた
+          適応的3次元形状計測による時空間分解能の向上, ロボティクス・メカトロニクス講演会 (ROBOMECH2019), (2019)</li><br>
+        <li>船瀬 龍, 三好 航太, 五十里 哲, 川端 洋輔, 尾崎 直哉, 中島 晋太郎, 小栗 健士朗, 神代 優季, 友岡 雅志, 野村 俊一郎,
+          和地 瞭良, 工藤 匠, 石川 晃寛, 柿原 浩太, 高橋 亮平, 柳田 幹太, 船曳 敦漠, 松下 周平, <b><u>井倉 幹大</u></b>, 小泉 宏之, 浅川 純,
+          小林 雄太, 冨木 淳史, 伊藤 大智, 鳥居 航, 吉川 一朗, 矢野 創, 阿部 新助, 橋本 樹明:
+          EQUULEUSのシステム概要と開発状況, 第18回 宇宙科学シンポジウム，相模原，2018 年1 月</li><br>
+        <li>船瀬龍, 三好航太, 五十里哲, 川端洋輔, 尾崎直哉, 中島晋太郎, 小栗健士朗, 神代優季, 友岡雅志, 野村俊一郎, 和地瞭良, 工藤匠,
+          石川晃寛, 柿原浩太, 高橋亮平, 柳田幹太, 船曳敦漠, 松下周平, <b><u>井倉幹大</u></b>, 小泉宏之, et. al.:
+          地球-月系ラグランジュ点探査CubeSat EQUULEUS(エクレウス)の概要と開発状況, 第61 回宇宙科学技術連合講演会，新潟，2017 年10 月</li><br>
+        <li>阿部 新助, 柳澤 正久, 布施 綾太, 小栗 健士朗, <b><u>井倉 幹大</u></b>, 矢野 創 , 船瀬 龍:
+          超小型６U深宇宙探査機EQUULEUS搭載カメラDELPHINUSの開発, 第17回 宇宙科学シンポジウム，相模原，2017 年1 月</li><br>
+        <li>船瀬 龍, 五十里 哲, 尾崎 直哉, 蟻生 開人, 友岡 雅志, <b><u>井倉 幹大</u></b>, 稲守 孝哉, 荒井 朋子, 小林 正規, 岩田 隆浩, 大槻 真嗣,
+          冨木 淳史, 川勝 康弘: 超小型探査機PROCYON mini による小惑星近接フライバイ観測と深宇宙でのランデブドッキング実験,
+          第 60 回宇宙科学技術連合講演会，函館，2016 年9 月</li>
       </ol>
 
       <div class="title"> Works </div>
-      <h3>TATA Consultancy Services</h3>
-      <ul>
-        <li>Software engineer (2019.9 &mdash; 2019.10)</li>
-        Theme: Drone-to-Drone detection & tracking algorithm with computer vision <br>
-        Study at Indian Institute of Science (IISc)
-      </ul>
-      <h3><a href="http://jasakawa9.wixsite.com/website">AQT-D</a></h3>
-      AQT-D is the ISS-deployed 3U CubeSat for a demonstration of the water micro-propulsion system,
-      launched by H-IIB rocket in 2019.09.25.
-      <ul>
-        <li>Software engineer(2018.6 &mdash; Now)</li>
-        ADCS software
-      </ul>
-      <h3>Mitsubishi Electric Co.</h3>
-      <ul>
-        <li>Software engineer (2018.8 &mdash; 2018.9)</li>
-        Theme: Driver's posture estimation using car inner camera by machine learning
-      </ul>
-      <h3><a href="http://www.k2.t.u-tokyo.ac.jp/index-j.html">Ishikawa Senoo Lab.</a></h3>
-      <ul>
-        <li>Research Assistant (2018.6 &mdash; Now)</li>
-      </ul>
-      <h3><a href="https://ispace-inc.com/jpn/">ispace inc.</a></h3>
-      <ul>
-        <li>Long term internship (2017.9 &mdash; 2018.6)</li>
-        Lunar lander mechatronics analysis engineer
-      </ul>
-      <h3><a href="https://www.space.t.u-tokyo.ac.jp/nlab/index.html">Nakasuka Funase Lab. (ISSL)</a></h3>
-      <ul>
-        <li>Development of nano spacecraft, <a href="https://www.space.t.u-tokyo.ac.jp/equuleus/en/">EQUULEUS</a> (2016.4 &mdash; 2017.9)</li>
-        Mission I/F, DELPHINUS<br>
-        ADCS software
-      </ul>
+      <ol>
+        <li>
+          <h3>TATA Consultancy Services</h3>
+          <ul>
+            <li>Software engineer (2019.9 &mdash; 2019.10)</li>
+            Theme: Drone-to-Drone detection & tracking algorithm with computer vision <br>
+            Study at Indian Institute of Science (IISc)
+          </ul>
+        </li>
+        <li>
+          <h3><a href="http://jasakawa9.wixsite.com/website">AQT-D</a></h3>
+          AQT-D is the ISS-deployed 3U CubeSat for a demonstration of the water micro-propulsion system,
+          launched by H-IIB rocket in 2019.09.25.
+          <ul>
+            <li>Software engineer(2018.6 &mdash; Now)</li>
+            ADCS software
+          </ul>
+        </li>
+        <li>
+          <h3>Mitsubishi Electric Co.</h3>
+          <ul>
+            <li>Software engineer (2018.8 &mdash; 2018.9)</li>
+            Theme: Driver's posture estimation using car inner camera by machine learning
+          </ul>
+        </li>
+        <li>
+          <h3><a href="http://www.k2.t.u-tokyo.ac.jp/index-j.html">Ishikawa Senoo Lab.</a></h3>
+          <ul>
+            <li>Research Assistant (2018.6 &mdash; Now)</li>
+          </ul>
+        </li>
+        <li>
+          <h3><a href="https://ispace-inc.com/jpn/">ispace inc.</a></h3>
+          <ul>
+            <li>Long term internship (2017.9 &mdash; 2018.6)</li>
+            Lunar lander mechatronics analysis engineer
+          </ul>
+        </li>
+        <li>
+          <h3><a href="https://www.space.t.u-tokyo.ac.jp/nlab/index.html">Nakasuka Funase Lab. (ISSL)</a></h3>
+          <ul>
+            <li>Development of nano spacecraft, <a href="https://www.space.t.u-tokyo.ac.jp/equuleus/en/">EQUULEUS</a> (2016.4 &mdash; 2017.9)</li>
+            Mission I/F, DELPHINUS<br>
+            ADCS software
+          </ul>
+        </li>
+      </ol>
+
+      <div class="title"> CV </div>
+      <h3><a href="https://mikihiroikura.github.io/">Download</a></h3>
     </div>
   </body>
 </html>
