CVのリンク修正

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
       </ol>
 
       <div class="title"> CV </div>
-      <h3><a href="https://mikihiroikura.github.io/">Download</a></h3>
+      <h3><a href="static/CV_mikihiro_ikura.pdf">Download</a></h3>
     </div>
   </body>
 </html>
