研究ページのリンク，ジャーナル論文の追加

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       Engineering, Department of Precision Engineering, the University of Tokyo.
       My major is high speed image processing, 3D sensing, and Robotics
       at Asama Yamashita Laboratory.
-      Especially, my research is focused on a UAV safe landing system
+      In particular, my research is focused on a UAV safe landing system
       on an unknown and unstable ground.
       <h3>Interests</h3>
       <ul>
@@ -61,16 +61,20 @@
       <div class="title"> Publications </div>
       <h3>Papers</h3>
       <ol>
+        <li><b><u>Mikihiro Ikura</u></b>, Leo Miyashita, and Masatoshi Ishikawa:
+          Stabilization System for UAV Landing on Rough Ground by Adaptive 3D
+          Sensing and High-speed Landing Gear Adjustment, Journal of Robotics and Mechatronics. (peer review)
+        </li><br>
         <li>Kazuya Yaginuma, Jun Asakawa, Yuichi Nakagawa, Yoshihiro Tsuruda, Hiroyuki Koizumi,
           Kota Kakihara, Kanta Yanagida, Yusuke Murata, <b><u>Mikihiro Ikura</u></b>, Shuhei Matsushita,
           Yoshihide Aoyanagi, Takeshi Matsumoto: AQT-D: CubeSat Demonstration of a Water Propulsion
           System Deployed from ISS, Transaction of JSASS, Aerospace Technology Japan, Vol. 17, No. 20, pp.1-8, 2020. (accepted)
-        </li>
+        </li><br>
         <li><b><u>Mikihiro Ikura</u></b>, Satoshi Ikari, Atsushi Tomiki, Ryu Funase, Shinichi Nakasuka:
           Estimation Algorithm of Relative Position and Attitude during Proximity Rendezvous
           Using Multiple Ultra-Wide-Band Devices, The 31st ISTS Special Issue of Transaction of JSASS,
           Aerospace Technology Japan. <a href="https://doi.org/10.2322/tastj.17.43">https://doi.org/10.2322/tastj.17.43</a>
-        </li>
+        </li><br>
       </ol>
 
       <h3>International Conference</h3>
@@ -78,7 +82,8 @@
         <li><b><u>Mikihiro Ikura</u></b>, Leo Miyashita, Masatoshi Ishikawa:
           Real-time Landing Gear Control System Based on Adaptive 3D Sensing for Safe Landing of UAV
           , 2020 IEEE/SICE International Symposium on System Integration (SII2020),
-          Hawaii Convention Center, Honolulu, Hawaii, USA, January 12&mdash;15, 2020. <b><font color="red">Best Student Paper Award</font></b>
+          Hawaii Convention Center, Honolulu, Hawaii, USA, January 12&mdash;15, 2020. <b><font color="red">Best Student Paper Award</font></b><br>
+          <b>Project web page: <a href="http://ishikawa-vision.org/vision/Safe_Landing/index-j.html" target="_blank">Japanese</a>/<a href="http://ishikawa-vision.org/vision/Safe_Landing/index-e.html" target="_blank">English</a></b>
         </li><br>
         <li>Jun Asakawa, Kazuya Yaginuma, Yoshihiro Tsuruda,
           Hiroyuki Koizumi, Yuichi Nakagawa, Kota Kakihara, Kanta Yanagida,
@@ -118,7 +123,7 @@
       <ol>
         <li><b><u>井倉 幹大</u></b>, 宮下 令央, 石川 正俊: 不整地への着陸に向けた適応的 3 次元形状計測による UAV の高速脚制御システム,
           第20回計測自動制御学会システムインテグレーション部門講演会 (SI2019), 講演論文集, 2E5-02, pp.1881-1886 (2019).</li><br>
-        <li>浅川純, 柳沼和也, 中川悠一, 鶴田佳宏, 小泉宏之, 柿原浩太, 柳田幹太, 松下周平, <u>井倉幹大</u>, 村田裕亮, 青柳賢英, 松本健
+        <li>浅川純, 柳沼和也, 中川悠一, 鶴田佳宏, 小泉宏之, 柿原浩太, 柳田幹太, 松下周平, <b><u>井倉 幹大</u></b>, 村田裕亮, 青柳賢英, 松本健
           : ISS放出による超小型水スラスタ実証衛星AQT-Dの開発, 第63回宇宙科学技術連合講演会, (2019.11.7) / 講演論文集, 2Q10 (2019).</li><br>
         <li><b><u>井倉 幹大</u></b>, 宮下 令央, 石川 正俊: UAVの安全着陸に向けた
           適応的3次元形状計測による時空間分解能の向上, ロボティクス・メカトロニクス講演会 (ROBOMECH2019), (2019)</li><br>
