ヘッダつけたけど気持ち悪いのでなし，GAの追加

--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <link rel="stylesheet" type="text/css" href="m-ikura_style.css">
   </head>
   <body>
+    <!--<header>
+      <nav>
+        <ul>
+          <li><a href="#bio">Biography</a></li>
+          <li><a href="#pubs">Publications</a></li>
+          <li><a href="#works">Works</a></li>
+          <li><a href="#cv">CV</a></li>
+        </ul>
+      </nav>
+    </header>-->
     <div class="palette">
       <div class="image">
         <img src="imgs/mikura_githubio.jpg" width="300px" />
@@ -20,7 +30,7 @@
         Email: ikura(at)robot.t.u-tokyo.ac.jp <br>
       </div>
       <p style="clear:both;"></p>
-      <div class="title"> Biography </div>
+      <div class="title" id="bio"> Biography </div>
       Mikihiro Ikura is a Ph.D student in Graduate School of
       Engineering, Department of Precision Engineering, the University of Tokyo.
       My major is high speed image processing, 3D sensing, and Robotics
@@ -58,7 +68,7 @@
       </ul>
 
 
-      <div class="title"> Publications </div>
+      <div class="title" id="pubs"> Publications </div>
       <h3>Papers</h3>
       <ol>
         <li><b><u>Mikihiro Ikura</u></b>, Leo Miyashita, and Masatoshi Ishikawa:
@@ -141,7 +151,7 @@
           第 60 回宇宙科学技術連合講演会，函館，2016 年9 月</li>
       </ol>
 
-      <div class="title"> Works </div>
+      <div class="title" id="works"> Works </div>
       <ol>
         <li>
           <h3>TATA Consultancy Services</h3>
@@ -164,7 +174,7 @@
           <h3>Mitsubishi Electric Co.</h3>
           <ul>
             <li>Software engineer (2018.8 &mdash; 2018.9)</li>
-            Theme: Driver's posture estimation using car inner camera by machine learning
+            Theme: Driver's posture estimation using car inner camera by machine learning and Genetic Algorithm
           </ul>
         </li>
         <li>
@@ -190,7 +200,7 @@
         </li>
       </ol>
 
-      <div class="title"> CV </div>
+      <div class="title" id="cv"> CV </div>
       <h3><a href="static/CV_mikihiro_ikura.pdf">Download</a></h3>
     </div>
   </body>
