SII2020のDOI追加SPSS Awardの修正

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <li><b><u>Mikihiro Ikura</u></b>, Leo Miyashita, Masatoshi Ishikawa:
           Real-time Landing Gear Control System Based on Adaptive 3D Sensing for Safe Landing of UAV
           , 2020 IEEE/SICE International Symposium on System Integration (SII2020),
-          Hawaii Convention Center, Honolulu, Hawaii, USA, January 12&mdash;15, 2020. <b><font color="red">Best Student Paper Award</font></b><br>
+          Hawaii Convention Center, Honolulu, Hawaii, USA, January 12&mdash;15, 2020. <a href="https://doi.org/10.1109/SII46433.2020.9026177">https://doi.org/10.1109/SII46433.2020.9026177</a>  <b><font color="red">Best Student Paper Award</font></b><br>
           <b>Project web page: <a href="http://ishikawa-vision.org/vision/Safe_Landing/index-j.html" target="_blank">Japanese</a>/<a href="http://ishikawa-vision.org/vision/Safe_Landing/index-e.html" target="_blank">English</a></b>
         </li><br>
         <li>Jun Asakawa, Kazuya Yaginuma, Yoshihiro Tsuruda,
@@ -119,7 +119,7 @@
           Position and Attitude during Proximity Rendezvous and Docking
            Using Multiple Ultra-Wide-Band Devices. 2017.6
            The 31st International Symposiumon Space Technology and Science(ISTS),
-           Matsuyama, Japan. <b><font color="red">(SPSS(Society for Promotion of Space Science) President Award)</font></b>
+           Matsuyama, Japan. <b><font color="red">SPSS (Society for Promotion of Space Science) President Award</font></b>
         </li><br>
         <li>Shunichiro Nomura, Ryohei Takahashi, <b><u>Mikihiro Ikura</u></b>,
           Kenshiro Oguri, Toshihiro Obata, Satoshi Ikari, Ryu Funase:
