日本機械学会優秀講演フェロー賞の追加

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 
       <h3>Scholarship & Awards</h3>
       <ul>
+        <li>日本機械学会 若手優秀講演フェロー賞, 2020.6</li>
         <li>Best Student Paper Award, 2020 IEEE/SICE International Symposium on System Integration (SII2020), 2020.1</li>
         <li>Research Fellowship for Young Scientists DC1, Japan Society for the Promotion of Science (JSPS), April (2020) – March (2023)</li>
         <li>The University of Tokyo Program for Leading Graduate Schools, Graduate Program for Social ICT Global Creative Leaders, 2019.4</li>
@@ -136,7 +137,7 @@
         <li>浅川純, 柳沼和也, 中川悠一, 鶴田佳宏, 小泉宏之, 柿原浩太, 柳田幹太, 松下周平, <b><u>井倉 幹大</u></b>, 村田裕亮, 青柳賢英, 松本健
           : ISS放出による超小型水スラスタ実証衛星AQT-Dの開発, 第63回宇宙科学技術連合講演会, (2019.11.7) / 講演論文集, 2Q10 (2019).</li><br>
         <li><b><u>井倉 幹大</u></b>, 宮下 令央, 石川 正俊: UAVの安全着陸に向けた
-          適応的3次元形状計測による時空間分解能の向上, ロボティクス・メカトロニクス講演会 (ROBOMECH2019), (2019)</li><br>
+          適応的3次元形状計測による時空間分解能の向上, ロボティクス・メカトロニクス講演会 (ROBOMECH2019), 2019 <b><font color="red">日本機械学会 若手優秀講演フェロー賞</font></b></li><br>
         <li>船瀬 龍, 三好 航太, 五十里 哲, 川端 洋輔, 尾崎 直哉, 中島 晋太郎, 小栗 健士朗, 神代 優季, 友岡 雅志, 野村 俊一郎,
           和地 瞭良, 工藤 匠, 石川 晃寛, 柿原 浩太, 高橋 亮平, 柳田 幹太, 船曳 敦漠, 松下 周平, <b><u>井倉 幹大</u></b>, 小泉 宏之, 浅川 純,
           小林 雄太, 冨木 淳史, 伊藤 大智, 鳥居 航, 吉川 一朗, 矢野 創, 阿部 新助, 橋本 樹明:
