論文追加，一部修正

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
       <h3>Interests</h3>
       <ul>
         <li>Robotics, Computer Vision</li>
-        <li>Autonomous safe landing system for UAV</li>
         <li>High-speed 3D sensing system for robotics</li>
+        <li>Autonomous safe landing system for UAV</li>
         <li>Rendezvous and docking system for nano-spacecraft</li>
       </ul>
 
@@ -56,7 +56,7 @@
       <ul>
         <li>Language: Japanese (native), English (intermediate)</li>
         <li>Programming language: C/C++, Python, Javascript, Ruby, HTML</li>
-        <li>Software: OpenCV, OpenGL, MATLAB, Linux(Ubuntu), MS Office, Inventor, Adobe Illustrator, AfterEffects, Chainer</li>
+        <li>Software: OpenCV, OpenGL, MATLAB, Linux(Ubuntu), MS Office, Inventor, Adobe Illustrator, AfterEffects, ROS, PyTorch, Chainer</li>
       </ul>
 
       <h3>Scholarship & Awards</h3>
@@ -145,6 +145,8 @@
         <li>船瀬龍, 三好航太, 五十里哲, 川端洋輔, 尾崎直哉, 中島晋太郎, 小栗健士朗, 神代優季, 友岡雅志, 野村俊一郎, 和地瞭良, 工藤匠,
           石川晃寛, 柿原浩太, 高橋亮平, 柳田幹太, 船曳敦漠, 松下周平, <b><u>井倉幹大</u></b>, 小泉宏之, et. al.:
           地球-月系ラグランジュ点探査CubeSat EQUULEUS(エクレウス)の概要と開発状況, 第61 回宇宙科学技術連合講演会，新潟，2017 年10 月</li><br>
+        <li>増田陽介, 布施綾太, 阿部新助, 柳澤正久, 島田隆司, 五十里哲, <b><u>井倉幹大</u></b>, 矢野創, 船瀬龍: 
+          超小型深宇宙探査機EQUULEUS搭載「月面衝突閃光カメラDELPHINUS」の性能評価, 日本惑星科学会2017年秋季講演会, 大阪, 2017年9月</li><br>
         <li>阿部 新助, 柳澤 正久, 布施 綾太, 小栗 健士朗, <b><u>井倉 幹大</u></b>, 矢野 創 , 船瀬 龍:
           超小型６U深宇宙探査機EQUULEUS搭載カメラDELPHINUSの開発, 第17回 宇宙科学シンポジウム，相模原，2017 年1 月</li><br>
         <li>船瀬 龍, 五十里 哲, 尾崎 直哉, 蟻生 開人, 友岡 雅志, <b><u>井倉 幹大</u></b>, 稲守 孝哉, 荒井 朋子, 小林 正規, 岩田 隆浩, 大槻 真嗣,
@@ -167,7 +169,7 @@
           AQT-D is the ISS-deployed 3U CubeSat for a demonstration of the water micro-propulsion system,
           launched by H-IIB rocket in 2019.09.25.
           <ul>
-            <li>Software engineer(2018.6 &mdash; Now)</li>
+            <li>Software engineer(2018.6 &mdash; 2020.4)</li>
             ADCS software
           </ul>
         </li>
