AQT-DのDOIの追加，GCLの賞の追加

--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
 
       <h3>Scholarship & Awards</h3>
       <ul>
+        <li>優秀発表 企業賞, コロナ検出と対策, 竹内雅樹, 大邉寛幸, 井倉幹大, CHUANLAI ZANG, 情報理工学系研究科 第3回 オンライン・シンポジウム
+          ポスト・コロナの新たな情報化社会へ向けての提言 - 産学連携への提案(2)</li>
         <li>日本機械学会 若手優秀講演フェロー賞, 2020.6</li>
         <li>Best Student Paper Award, 2020 IEEE/SICE International Symposium on System Integration (SII2020), 2020.1</li>
         <li>Research Fellowship for Young Scientists DC1, Japan Society for the Promotion of Science (JSPS), April (2020) – March (2023)</li>
@@ -79,7 +81,8 @@
         <li>Kazuya Yaginuma, Jun Asakawa, Yuichi Nakagawa, Yoshihiro Tsuruda, Hiroyuki Koizumi,
           Kota Kakihara, Kanta Yanagida, Yusuke Murata, <b><u>Mikihiro Ikura</u></b>, Shuhei Matsushita,
           Yoshihide Aoyanagi, Takeshi Matsumoto: AQT-D: CubeSat Demonstration of a Water Propulsion
-          System Deployed from ISS, Transaction of JSASS, Aerospace Technology Japan, Vol. 17, No. 20, pp.1-8, 2020. (accepted)
+          System Deployed from ISS, Transaction of JSASS, Aerospace Technology Japan, Vol. 17, No. 20, pp.1-8, 2020. 
+          <a href="https://doi.org/10.2322/tastj.18.141">https://doi.org/10.2322/tastj.18.141</a>
         </li><br>
         <li><b><u>Mikihiro Ikura</u></b>, Satoshi Ikari, Atsushi Tomiki, Ryu Funase, Shinichi Nakasuka:
           Estimation Algorithm of Relative Position and Attitude during Proximity Rendezvous
