--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
       <h3>Scholarship & Awards</h3>
       <ul>
-        <li>優秀発表 企業賞, コロナ検出と対策, 竹内 雅樹, 大邉 寛幸, <b><u>井倉 幹大</u></b>, CHUANLAI ZANG, 情報理工学系研究科 第3回 オンライン・シンポジウム
+        <li>優秀発表 企業賞, 竹内 雅樹, 大邉 寛幸, <b><u>井倉 幹大</u></b>, CHUANLAI ZANG: コロナ検出と対策, 情報理工学系研究科 第3回 オンライン・シンポジウム
           ポスト・コロナの新たな情報化社会へ向けての提言 - 産学連携への提案(2)</li>
         <li>日本機械学会 若手優秀講演フェロー賞, 2020.6</li>
         <li>Best Student Paper Award, 2020 IEEE/SICE International Symposium on System Integration (SII2020), 2020.1</li>
