ARLISS追加，Accept追加，フェロー賞URL追加

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <ul>
         <li>優秀発表 企業賞, 竹内 雅樹, 大邉 寛幸, <b><u>井倉 幹大</u></b>, CHUANLAI ZANG: コロナ検出と対策, 情報理工学系研究科 第3回 オンライン・シンポジウム
           ポスト・コロナの新たな情報化社会へ向けての提言 - 産学連携への提案(2), 2020.10</li>
-        <li>日本機械学会 若手優秀講演フェロー賞, 2020.6</li>
+        <li><a href="https://www.jsme.or.jp/archive/award/shou6-19.pdf">日本機械学会 若手優秀講演フェロー賞, 2020.6</a></li>
         <li>Best Student Paper Award, 2020 IEEE/SICE International Symposium on System Integration (SII2020), 2020.1</li>
         <li>Research Fellowship for Young Scientists DC1, Japan Society for the Promotion of Science (JSPS), April (2020) – March (2023)</li>
         <li>The University of Tokyo Program for Leading Graduate Schools, Graduate Program for Social ICT Global Creative Leaders, 2019.4</li>
@@ -76,7 +76,7 @@
       <ol>
         <li><b><u>Mikihiro Ikura</u></b>, Leo Miyashita, and Masatoshi Ishikawa:
           Stabilization System for UAV Landing on Rough Ground by Adaptive 3D
-          Sensing and High-speed Landing Gear Adjustment, Journal of Robotics and Mechatronics. (peer review)
+          Sensing and High-speed Landing Gear Adjustment, Journal of Robotics and Mechatronics. (accepted)
         </li><br>
         <li>Kazuya Yaginuma, Jun Asakawa, Yuichi Nakagawa, Yoshihiro Tsuruda, Hiroyuki Koizumi,
           Kota Kakihara, Kanta Yanagida, Yusuke Murata, <b><u>Mikihiro Ikura</u></b>, Shuhei Matsushita,
@@ -202,6 +202,14 @@
             <li>Development of nano spacecraft, <a href="https://www.space.t.u-tokyo.ac.jp/equuleus/en/">EQUULEUS</a> (2016.4 &mdash; 2017.9)</li>
             Mission I/F, DELPHINUS<br>
             ADCS software
+          </ul>
+        </li>
+        <li>
+          <h3><a href="http://unisec.jp/archives/2382">ARLISS 2015</a></h3>
+          ARLISS (A Rocket Launch for International Student Satellites) is a robotics competition for small artificial satellite (CanSat).
+          <ul>
+            <li>Development of CubeSat</li>
+            Software engineer
           </ul>
         </li>
       </ol>
