--- a/index.html
+++ b/index.html
@@ -61,8 +61,7 @@
 
       <h3>Scholarship & Awards</h3>
       <ul>
-        <li>優秀発表 企業賞, 竹内 雅樹, 大邉 寛幸, <b><u>井倉 幹大</u></b>, CHUANLAI ZANG: コロナ検出と対策, 情報理工学系研究科 第3回 オンライン・シンポジウム
-          ポスト・コロナの新たな情報化社会へ向けての提言 - 産学連携への提案(2), 2020.10</li>
+        <li><a href="static/Award_0925_1.pdf">優秀発表 企業賞, 2020.10</a></li>
         <li><a href="https://www.jsme.or.jp/archive/award/shou6-19.pdf">日本機械学会 若手優秀講演フェロー賞, 2020.6</a></li>
         <li>Best Student Paper Award, 2020 IEEE/SICE International Symposium on System Integration (SII2020), 2020.1</li>
         <li>Research Fellowship for Young Scientists DC1, Japan Society for the Promotion of Science (JSPS), April (2020) – March (2023)</li>
@@ -155,6 +154,12 @@
         <li>船瀬 龍, 五十里 哲, 尾崎 直哉, 蟻生 開人, 友岡 雅志, <b><u>井倉 幹大</u></b>, 稲守 孝哉, 荒井 朋子, 小林 正規, 岩田 隆浩, 大槻 真嗣,
           冨木 淳史, 川勝 康弘: 超小型探査機PROCYON mini による小惑星近接フライバイ観測と深宇宙でのランデブドッキング実験,
           第 60 回宇宙科学技術連合講演会，函館，2016 年9 月</li>
+      </ol>
+
+      <h3>Talks</h3>
+      <ol>
+        <li>竹内 雅樹, 大邉 寛幸, <b><u>井倉 幹大</u></b>, CHUANLAI ZANG: コロナ検出と対策, 情報理工学系研究科 第3回 オンライン・シンポジウム
+          ポスト・コロナの新たな情報化社会へ向けての提言 - 産学連携への提案(2), 2020.10</li>
       </ol>
 
       <div class="title" id="works"> Works </div>
