--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
       <h3>Talks</h3>
       <ol>
         <li>竹内 雅樹, 大邉 寛幸, <b><u>井倉 幹大</u></b>, CHUANLAI ZANG: コロナ検出と対策, 情報理工学系研究科 第3回 オンライン・シンポジウム
-          ポスト・コロナの新たな情報化社会へ向けての提言 - 産学連携への提案(2), 2020.10</li>
+          ポスト・コロナの新たな情報化社会へ向けての提言 - 産学連携への提案(2), 2020.10 <b><font color="red">優秀発表 企業賞</font></b></li>
       </ol>
 
       <div class="title" id="works"> Works </div>
