--- a/index.html
+++ b/index.html
@@ -134,6 +134,8 @@
 
       <h3>Domestic Conference</h3>
       <ol>
+        <li><b><u>井倉 幹大</u></b>, Pathak Sarthak, 山下 淳, 淺間 一: ダイレクトドライブモータを用いた計測範囲の能動的変更が可能な三次元形状計測システムの提案,
+          第21回計測自動制御学会システムインテグレーション部門講演会 (SI2020), 講演論文集, 2B2-10, pp.1395-1400 (2020).</li><br>
         <li><b><u>井倉 幹大</u></b>, 宮下 令央, 石川 正俊: 不整地への着陸に向けた適応的 3 次元形状計測による UAV の高速脚制御システム,
           第20回計測自動制御学会システムインテグレーション部門講演会 (SI2019), 講演論文集, 2E5-02, pp.1881-1886 (2019).</li><br>
         <li>浅川純, 柳沼和也, 中川悠一, 鶴田佳宏, 小泉宏之, 柿原浩太, 柳田幹太, 松下周平, <b><u>井倉 幹大</u></b>, 村田裕亮, 青柳賢英, 松本健
