JRMの論文の追加

--- a/index.html
+++ b/index.html
@@ -75,7 +75,9 @@
       <ol>
         <li><b><u>Mikihiro Ikura</u></b>, Leo Miyashita, and Masatoshi Ishikawa:
           Stabilization System for UAV Landing on Rough Ground by Adaptive 3D
-          Sensing and High-speed Landing Gear Adjustment, Journal of Robotics and Mechatronics. (accepted)
+          Sensing and High-speed Landing Gear Adjustment, Journal of Robotics and Mechatronics,
+          Journal of Robotics and Mechatronics, Vol. 33, No. 1, pp.108-118, 2021.
+          <a href="https://doi.org/10.20965/jrm.2021.p0108">https://doi.org/10.20965/jrm.2021.p0108</a>
         </li><br>
         <li>Kazuya Yaginuma, Jun Asakawa, Yuichi Nakagawa, Yoshihiro Tsuruda, Hiroyuki Koizumi,
           Kota Kakihara, Kanta Yanagida, Yusuke Murata, <b><u>Mikihiro Ikura</u></b>, Shuhei Matsushita,
